--- a/script/build
+++ b/script/build
@@ -19,8 +19,8 @@ do
 done
 
 if [ -z ${FAST_BUILD+set} ]; then
-  echo "Creating an optimized build. This can take half an hour."
-  echo "Specifying -fast skips optimizations, building in a few minutes."
+  echo "Creating an optimized build, which can take more than half an hour."
+  echo "Specifying -fast skips optimizations and takes less than two minutes."
 fi
 
 #----------------------------------------------------
