Add a verbose build mode

--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -1,5 +1,9 @@
 #!/usr/bin/env bash
 
+if [ "${VERBOSE_BUILD:-0}" == "1" ]; then
+  set -x
+fi
+
 if [ ! -f jscomp.js ]; then
   curl -s -O http://planck-repl.org/releases/closure-${CLOSURE_JS_RELEASE}/jscomp.js
 fi
