Log the path if verbose

--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -24,5 +24,8 @@ fi
 if [ -n "${RESOLVE_ALIAS+set}" ]; then
   clojure -R"${RESOLVE_ALIAS}" -Sdeps "${DEPS:-{}}" script/build.clj
 else
+  if [ "${VERBOSE_BUILD:-0}" == "1" ]; then
+    clojure -Sdeps "${DEPS:-{}}" -Spath
+  fi
   clojure -Sdeps "${DEPS:-{}}" script/build.clj
 fi
