--- a/script/build
+++ b/script/build
@@ -95,7 +95,7 @@ if [ -n "$NON_BUNDLED_SRC" ] || [ ! -d planck-c/build ] || [ $BUNDLE_SIZE -le 40
   
   echo "### AOT compiling macro namespaces"
   mkdir -p planck-cljs/out/macros-tmp
-  planck-c/build/planck -sk planck-cljs/out/macros-tmp -e"(require 'cljs.analyzer)" -e"(do (set! cljs.analyzer/*cljs-warnings* (assoc cljs.analyzer/*cljs-warnings* :undeclared-var false)) nil)" -e "(require-macros 'planck.repl 'planck.core 'planck.shell 'planck.from.io.aviso.ansi 'clojure.template 'cljs.spec.alpha 'cljs.spec.test.alpha 'cljs.spec.gen.alpha 'cljs.test)"
+  planck-c/build/planck -sk planck-cljs/out/macros-tmp -e"(require 'cljs.analyzer)" -e"(do (set! cljs.analyzer/*cljs-warnings* (assoc cljs.analyzer/*cljs-warnings* :undeclared-var false)) nil)" -e "(require-macros 'planck.repl 'planck.core 'planck.shell 'planck.from.io.aviso.ansi 'clojure.template 'cljs.spec.alpha 'cljs.spec.test.alpha 'cljs.spec.gen.alpha 'cljs.test 'cljs.pprint)"
   checkCmdSuccess
   
   mv planck-cljs/out/macros-tmp/planck_SLASH_repl\$macros.js planck-cljs/out/planck/repl\$macros.js
@@ -115,7 +115,10 @@ if [ -n "$NON_BUNDLED_SRC" ] || [ ! -d planck-c/build ] || [ $BUNDLE_SIZE -le 40
   mv planck-cljs/out/macros-tmp/clojure_SLASH_template\$macros.js.map.json planck-cljs/out/clojure/template\$macros.js.map.json
   mv planck-cljs/out/macros-tmp/cljs_SLASH_test\$macros.js planck-cljs/out/cljs/test\$macros.js
   mv planck-cljs/out/macros-tmp/cljs_SLASH_test\$macros.cache.json planck-cljs/out/cljs/test\$macros.cache.json
-  mv planck-cljs/out/macros-tmp/cljs_SLASH_test\$macros.js.map.json planck-cljs/out/planck/test\$macros.js.map.json
+  mv planck-cljs/out/macros-tmp/cljs_SLASH_test\$macros.js.map.json planck-cljs/out/cljs/test\$macros.js.map.json
+  mv planck-cljs/out/macros-tmp/cljs_SLASH_pprint\$macros.js planck-cljs/out/cljs/pprint\$macros.js
+  mv planck-cljs/out/macros-tmp/cljs_SLASH_pprint\$macros.cache.json planck-cljs/out/cljs/pprint\$macros.cache.json
+  mv planck-cljs/out/macros-tmp/cljs_SLASH_pprint\$macros.js.map.json planck-cljs/out/cljs/pprint\$macros.js.map.json
   mv planck-cljs/out/macros-tmp/cljs_SLASH_spec_SLASH_alpha\$macros.js planck-cljs/out/cljs/spec/alpha\$macros.js
   mv planck-cljs/out/macros-tmp/cljs_SLASH_spec_SLASH_alpha\$macros.cache.json planck-cljs/out/cljs/spec/alpha\$macros.cache.json
   mv planck-cljs/out/macros-tmp/cljs_SLASH_spec_SLASH_alpha\$macros.js.map.json planck-cljs/out/cljs/spec/alpha\$macros.js.map.json
