--- a/script/build
+++ b/script/build
@@ -66,6 +66,9 @@ if [ -n "$NON_BUNDLED_SRC" ] || [ ! -d planck-c/build ] || [ $BUNDLE_SIZE -le 40
   # We need them to be compiled by the 1st stage binary
   rm -f planck-cljs/out/planck/*macros*
   rm -f planck-cljs/out/planck/pprint/*macros*
+  rm -f planck-cljs/out/planck/analyzer/macros/*macros*
+  rm -f planck-cljs/out/planck/compiler/macros/*macros*
+  rm -f planck-cljs/out/planck/env/macros/*macros*
   rm -f planck-cljs/out/clojure/template*macros*
   rm -f planck-cljs/out/cljs/test*macros*
   rm -f planck-cljs/out/cljs/spec/alpha*macros*
@@ -95,7 +98,7 @@ if [ -n "$NON_BUNDLED_SRC" ] || [ ! -d planck-c/build ] || [ $BUNDLE_SIZE -le 40
   
   echo "### AOT compiling macro namespaces"
   mkdir -p planck-cljs/out/macros-tmp
-  planck-c/build/planck -sk planck-cljs/out/macros-tmp -e"(require 'cljs.analyzer)" -e"(do (set! cljs.analyzer/*cljs-warnings* (assoc cljs.analyzer/*cljs-warnings* :undeclared-var false)) nil)" -e "(require-macros 'planck.repl 'planck.core 'planck.shell 'planck.from.io.aviso.ansi 'clojure.template 'cljs.spec.alpha 'cljs.spec.test.alpha 'cljs.spec.gen.alpha 'cljs.test 'cljs.pprint)"
+  planck-c/build/planck -sk planck-cljs/out/macros-tmp -e"(require 'cljs.analyzer)" -e"(do (set! cljs.analyzer/*cljs-warnings* (assoc cljs.analyzer/*cljs-warnings* :undeclared-var false)) nil)" -e "(require-macros 'planck.repl 'planck.core 'planck.shell 'planck.from.io.aviso.ansi 'clojure.template 'cljs.spec.alpha 'cljs.spec.test.alpha 'cljs.spec.gen.alpha 'cljs.test 'cljs.pprint 'cljs.analyzer.macros 'cljs.compiler.macros 'cljs.env.macros)"
   checkCmdSuccess
   
   mv planck-cljs/out/macros-tmp/planck_SLASH_repl\$macros.js planck-cljs/out/planck/repl\$macros.js
@@ -128,6 +131,15 @@ if [ -n "$NON_BUNDLED_SRC" ] || [ ! -d planck-c/build ] || [ $BUNDLE_SIZE -le 40
   mv planck-cljs/out/macros-tmp/cljs_SLASH_spec_SLASH_gen_SLASH_alpha\$macros.js planck-cljs/out/cljs/spec/gen/alpha\$macros.js
   mv planck-cljs/out/macros-tmp/cljs_SLASH_spec_SLASH_gen_SLASH_alpha\$macros.cache.json planck-cljs/out/cljs/spec/gen/alpha\$macros.cache.json
   mv planck-cljs/out/macros-tmp/cljs_SLASH_spec_SLASH_gen_SLASH_alpha\$macros.js.map.json planck-cljs/out/cljs/spec/gen/alpha\$macros.js.map.json
+  mv planck-cljs/out/macros-tmp/cljs_SLASH_analyzer_SLASH_macros\$macros.js planck-cljs/out/cljs/analyzer/macros\$macros.js
+  mv planck-cljs/out/macros-tmp/cljs_SLASH_analyzer_SLASH_macros\$macros.cache.json planck-cljs/out/cljs/analyzer/macros\$macros.cache.json
+  mv planck-cljs/out/macros-tmp/cljs_SLASH_analyzer_SLASH_macros\$macros.js.map.json planck-cljs/out/cljs/analyzer/macros\$macros.js.map.json
+  mv planck-cljs/out/macros-tmp/cljs_SLASH_compiler_SLASH_macros\$macros.js planck-cljs/out/cljs/compiler/macros\$macros.js
+  mv planck-cljs/out/macros-tmp/cljs_SLASH_compiler_SLASH_macros\$macros.cache.json planck-cljs/out/cljs/compiler/macros\$macros.cache.json
+  mv planck-cljs/out/macros-tmp/cljs_SLASH_compiler_SLASH_macros\$macros.js.map.json planck-cljs/out/cljs/compiler/macros\$macros.js.map.json
+  mv planck-cljs/out/macros-tmp/cljs_SLASH_env_SLASH_macros\$macros.js planck-cljs/out/cljs/env/macros\$macros.js
+  mv planck-cljs/out/macros-tmp/cljs_SLASH_env_SLASH_macros\$macros.cache.json planck-cljs/out/cljs/env/macros\$macros.cache.json
+  mv planck-cljs/out/macros-tmp/cljs_SLASH_env_SLASH_macros\$macros.js.map.json planck-cljs/out/cljs/env/macros\$macros.js.map.json
   
   rm -rf planck-cljs/out/macros-tmp
   
