--- a/script/build
+++ b/script/build
@@ -31,7 +31,7 @@ if [ "${VERBOSE_BUILD:-0}" == "1" ]; then
 fi
 
 if [ -z ${FAST_BUILD+set} ]; then
-  echo "Creating an optimized build, which can take more than half an hour."
+  echo "Creating an optimized build, which can take more than an hour and a half."
   echo "Specifying --fast skips optimizations and takes less than two minutes."
 fi
 
@@ -47,7 +47,7 @@ checkCmdSuccess() {
     fi
 }
 
-export CLOSURE_RELEASE="20180610"
+export CLOSURE_RELEASE="20190301"
 export CLOSURE_JS_RELEASE=${CLOSURE_RELEASE}.0.0
 script/get-closure-compiler
 
