Improve Google Closure Library Bundling
Planck bundles the Google Closure Library. Previous to this commit, that
was achieved by: (1) installing an unofficial distribution of GCL from
Maven Central; and (2) manually listing the namespaces to import in
`planck-cljs/bundle.cljs`. This was problematic since it meant that the
GCL bundled with Planck was often not up to date. It also was difficult
to maintain as the large number of namespaces made available via GCL
were hand-coded.

This commit solves those problems by having the build script: (1)
download an official distribution of GCL from the official GitHub
repository; and (2) generate the namespaces to import from the files
that make up this distribution.

In addition, this commit also introduces a caching mechanism for the
files generated as part of the build process. Planck provides a `--fast`
compilation mode that skips some of the optimisation steps that greatly
increase build times but even this mode repeats work that is unnecessary
for the majority of the bundled files that do not change.

The cache works by saving the generated files to the cache with a name
that combines the name of the file and the MD5 hash of the file's
contents.

--- a/script/build
+++ b/script/build
@@ -32,6 +32,7 @@ fi
 
 if [ -z ${FAST_BUILD+set} ]; then
   echo "Creating an optimized build, which can take more than an hour and a half."
+  echo "The build time will be substantially reduced if the build cache is up to date."
   echo "Specifying --fast skips optimizations and takes less than two minutes."
 fi
 
@@ -47,9 +48,12 @@ checkCmdSuccess() {
     fi
 }
 
-export CLOSURE_RELEASE="20190301"
-export CLOSURE_JS_RELEASE=${CLOSURE_RELEASE}.0.0
+export GCC_RELEASE="20190301"
+export CLOSURE_JS_RELEASE=${GCC_RELEASE}.0.0
 script/get-closure-compiler
+
+export GCL_RELEASE="20190301"
+script/get-closure-library
 
 NON_BUNDLED_SRC=`find planck-cljs -type f -newer planck-c/bundle.c`
 BUNDLE_SIZE=$(wc -c < planck-c/bundle.c)
@@ -100,7 +104,7 @@ if [ -n "$NON_BUNDLED_SRC" ] || [ ! -d planck-c/build ] || [ $BUNDLE_SIZE -le 40
   mkdir -p planck-cljs/out/macros-tmp
   planck-c/build/planck -sk planck-cljs/out/macros-tmp -e"(require 'cljs.analyzer)" -e"(do (set! cljs.analyzer/*cljs-warnings* (assoc cljs.analyzer/*cljs-warnings* :undeclared-var false)) nil)" -e "(require-macros 'planck.repl 'planck.core 'planck.shell 'planck.from.io.aviso.ansi 'clojure.template 'cljs.spec.alpha 'cljs.spec.test.alpha 'cljs.spec.gen.alpha 'cljs.test 'cljs.pprint 'cljs.analyzer.macros 'cljs.compiler.macros 'cljs.env.macros)"
   checkCmdSuccess
-  
+
   mv planck-cljs/out/macros-tmp/planck_SLASH_repl\$macros.js planck-cljs/out/planck/repl\$macros.js
   mv planck-cljs/out/macros-tmp/planck_SLASH_repl\$macros.cache.json planck-cljs/out/planck/repl\$macros.cache.json
   mv planck-cljs/out/macros-tmp/planck_SLASH_repl\$macros.js.map.json planck-cljs/out/planck/repl\$macros.js.map.json
