--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ build-envs/*/*-cloudimg-console.log
 /planck-cljs/jscomp.js
 /planck-cljs/bundle.c
 /planck-cljs/bundle_dict.c
+/planck-cljs/src/planck/bundle
+.buildcache
 .cpcache
 .planck_cache
 /planck-man/plk.1
