Fix missing image on official site

--- a/site/script/build
+++ b/site/script/build
@@ -34,4 +34,5 @@
 (process-md "index.md")
 
 (sh "cp" "-r" (str src "css") public)
+(sh "cp" "-r" (str src "img") public)
 (sh "cp" "-r" (str src "js") public)
