Make C compiler warnings be errors in CI
Fixes #944

--- a/.drone.yml
+++ b/.drone.yml
@@ -16,5 +16,5 @@ steps:
   - apt-get update
   - apt-get -qq install -y default-jdk clang cmake xxd pkg-config unzip
   - apt-get -qq install -y libjavascriptcoregtk-4.0 libglib2.0-dev libzip-dev libcurl4-gnutls-dev libicu-dev
-  - script/build --fast
+  - script/build --fast -Werror
   - script/test
