--- a/script/build
+++ b/script/build
@@ -60,6 +60,8 @@ script/get-closure-library
 
 script/get-build-cache
 
+export PAREDIT_JS_RELEASE="0.3.6"
+
 NON_BUNDLED_SRC=`find planck-cljs -type f -newer planck-c/bundle.c`
 BUNDLE_SIZE=$(wc -c < planck-c/bundle.c)
 if [ -n "$NON_BUNDLED_SRC" ] || [ ! -d planck-c/build ] || [ $BUNDLE_SIZE -le 400 ]; then
