--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -27,8 +27,8 @@ if [ -n "${CANARY_CLOJURESCRIPT_VERSION+set}" ]; then
   DEPS="{:deps {org.clojure/clojurescript {:mvn/version \"$CANARY_CLOJURESCRIPT_VERSION\"}}}"
 fi
 
-if [ -n "${RESOLVE_ALIAS+set}" ]; then
-  clojure -R"${RESOLVE_ALIAS}" -Sdeps "${DEPS:-{}}" -M script/build.clj
+if [ -n "${MAIN_ALIASES+set}" ]; then
+  clojure -Sdeps "${DEPS:-{}}" -M"${MAIN_ALIASES}" script/build.clj
 else
   if [ "${VERBOSE_BUILD:-0}" == "1" ]; then
     clojure -Sdeps "${DEPS:-{}}" -Spath
