--- a/.github/workflows/build_test_planck.yml
+++ b/.github/workflows/build_test_planck.yml
@@ -39,6 +39,7 @@ jobs:
 
       - name: Install deps
         run: |
+            sudo apt-get update
             sudo apt-get install -y libjavascriptcoregtk-4.0 libglib2.0-dev libzip-dev libcurl4-gnutls-dev libicu-dev unzip
 
       - name: Build and Test Planck
