--- a/.github/workflows/build_test_planck.yml
+++ b/.github/workflows/build_test_planck.yml
@@ -13,6 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3.0.2
 
+      - uses: actions/setup-java@v3.4.1
+        with:
+          distribution: 'temurin'
+          java-version: '8'
+
       - name: Install Clojure
         uses: DeLaGuardo/setup-clojure@9.4
         with:
